--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "angular-material-icons": "^0.7.1",
     "ol": "^6.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
